# assigment-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/workflows/: windows-release.yml
src/: App.tsx  ErrorBoundary.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
