[package]
name = "assignment_tracker"
version = "0.1.0"
description = "Assignment tracker desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.5.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when a dev server is not available
custom-protocol = ["tauri/custom-protocol"]
